--- a/to-do-application/package.json
+++ b/to-do-application/package.json
@@ -19,6 +19,8 @@
     },
     "dependencies": {
         "flowbite": "^3.1.2",
-        "flowbite-datepicker": "^1.3.2"
+        "flowbite-datepicker": "^1.3.2",
+        "toastify-js": "^1.12.0",
+        "toastr": "^2.1.4"
     }
 }
